# w2_scanner

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  w2_scanner.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-app.yml
src/w2_scanner/: __init__.py  scanner.py
tests/: __init__.py  test_scanner.py
